add expenses
